--- a/src/templates/navigation/pivot/index.html
+++ b/src/templates/navigation/pivot/index.html
@@ -7,225 +7,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <title>Navigation - Pivot</title>
 
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.1.min.js" type="text/javascript"></script>
-
-    <!-- For the Office UI Fabric, go to http://aka.ms/office-ui-fabric to learn more. -->
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.4.0/fabric.min.css">
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.4.0/fabric.components.min.css">
-
+    <!-- For more info on Office UI Fabric, go to http://aka.ms/office-ui-fabric to learn more. -->
+    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric-js/dist/css/fabric.min.css" />
+    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric-js/dist/css/fabric.components.min.css" />
 
     <!-- Template styles -->
-    <link href="../../../common.css" rel="stylesheet" />
     <link href="pivot.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="pivot.helper.js"></script>
-
-    <!-- Fabric component -->
-    <script type="text/javascript" src="Pivot.js"></script>
-    <script type="text/javascript" src="Breadcrumb.js"></script>
+    
+    <!-- Required JS -->
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
+    <script src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/js/fabric.min.js"></script>
 
 </head>
-<body class="ms-navigation-pivot">
+<!-- <body class="ms-navigation-pivot">
     <ul class="ms-navigation-pivot__header ms-Pivot">
         <li class="ms-navigation-pivot__link ms-Pivot-link is-selected" data-pivotContent="[data-demo='tabs']>.feature1">Page 1</li>
         <li class="ms-navigation-pivot__link ms-Pivot-link" data-pivotContent="[data-demo='tabs']>.feature2">Page 2</li>
         <li class="ms-navigation-pivot__link ms-Pivot-link" data-pivotContent="[data-demo='tabs']>.feature3">Page 3</li>
         <li class="ms-navigation-pivot__link ms-Pivot-link" data-pivotContent="[data-demo='tabs']>.feature4">Page 4</li>
-    </ul>
-    <div data-demo="tabs">
-        <div class="ms-navigation-pivot__content ms-Pivot-content is-selected feature1">
-            <div class="ms-font-m ms-fontColor-neutralPrimary">
-                <h2 class="ms-font-xl ms-fontWeight-light">Page 1 Title</h2>
-            </div>
-            <div class="ms-navigation-pivot__breadcrumb ms-Breadcrumb">
-                <div class="ms-Breadcrumb-overflow">
-                    <div class="ms-Breadcrumb-overflowButton ms-Icon ms-Icon--ellipsis" tabindex="1"></div>
-                    <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                    <div class="ms-Breadcrumb-overflowMenu">
-                        <ul class="ms-ContextualMenu is-open"></ul>
-                    </div>
-                </div>
-                <ul class="ms-Breadcrumb-list">
-                    <li class="ms-Breadcrumb-listItem">
-                        <a class="ms-Breadcrumb-itemLink" href="#" tabindex="2">Files</a>
-                        <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                    </li>
-                    <li class="ms-Breadcrumb-listItem">
-                        <a class="ms-Breadcrumb-itemLink" href="#" tabindex="3">Folder 1</a>
-                        <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                    </li>
-                    <li class="ms-Breadcrumb-listItem">
-                        <a class="ms-Breadcrumb-itemLink" href="#" tabindex="4">Folder 2</a>
-                        <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                    </li>
-                    <li class="ms-Breadcrumb-listItem">
-                        <a class="ms-Breadcrumb-itemLink" href="#" tabindex="5">Folder 3</a>
-                        <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                    </li>
-                    <li class="ms-Breadcrumb-listItem">
-                        <a class="ms-Breadcrumb-itemLink" href="#" tabindex="6">Folder 4</a>
-                        <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                    </li>
-                    <li class="ms-Breadcrumb-listItem">
-                        <a class="ms-Breadcrumb-itemLink" href="#" tabindex="7">Folder 5</a>
-                        <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                    </li>
-                </ul>
-            </div>
-            <p class="ms-font-l ms-fontWeight-semilight">Body Text</p>
-            <ul class="ms-font-m">
-                <li>List item 1</li>
-                <li>List item 2</li>
-                <li>List item 3</li>
-            </ul>
+    </ul> -->
+<body>
+    <div class="ms-Pivot">
+        <ul class="ms-Pivot-links">
+            <li class="ms-Pivot-link is-selected" data-content="files" title="My files" tabindex="1">
+            My files
+            </li>
+            <li class="ms-Pivot-link " data-content="recent" title="Recent" tabindex="1">
+            Recent
+            </li>
+            <li class="ms-Pivot-link " data-content="shared" title="Shared with me" tabindex="1">
+            Shared with me
+            </li>
+            <li class="ms-Pivot-link" tabindex="1">
+                <i class="ms-Pivot-ellipsis ms-Icon ms-Icon--More"></i>
+            </li>
+        </ul>
+        <div class="ms-Pivot-content" data-content="files">
+        This is the my files tab.
         </div>
-        <div class="ms-navigation-pivot__content ms-Pivot-content feature2">
-            <section class="ms-font-m ms-fontColor-neutralPrimary">
-                <h2 class="ms-font-xl ms-fontWeight-light">Page 2 Title</h2>
-                <div class="ms-navigation-pivot__breadcrumb ms-Breadcrumb">
-                    <div class="ms-Breadcrumb-overflow">
-                        <div class="ms-Breadcrumb-overflowButton ms-Icon ms-Icon--ellipsis" tabindex="1"></div>
-                        <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        <div class="ms-Breadcrumb-overflowMenu">
-                            <ul class="ms-ContextualMenu is-open"></ul>
-                        </div>
-                    </div>
-                    <ul class="ms-Breadcrumb-list">
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="2">Files</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="3">Folder 1</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="4">Folder 2</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="5">Folder 3</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="6">Folder 4</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="7">Folder 5</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                    </ul>
-                </div>
-                <p class="ms-font-l ms-fontWeight-semilight">Body Text</p>
-                <ul class="ms-font-m">
-                    <li>List item 1</li>
-                    <li>List item 2</li>
-                    <li>List item 3</li>
-                </ul>
-            </section>
+        <div class="ms-Pivot-content" data-content="recent">
+        This is the recent tab.
         </div>
-        <div class="ms-navigation-pivot__content ms-Pivot-content feature3">
-            <section class="ms-font-m ms-fontColor-neutralPrimary">
-                <h2 class="ms-font-xl ms-fontWeight-light">Page 3 Title</h2>
-                <div class="ms-navigation-pivot__breadcrumb ms-Breadcrumb">
-                    <div class="ms-Breadcrumb-overflow">
-                        <div class="ms-Breadcrumb-overflowButton ms-Icon ms-Icon--ellipsis" tabindex="1"></div>
-                        <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        <div class="ms-Breadcrumb-overflowMenu">
-                            <ul class="ms-ContextualMenu is-open"></ul>
-                        </div>
-                    </div>
-                    <ul class="ms-Breadcrumb-list">
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="2">Files</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="3">Folder 1</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="4">Folder 2</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="5">Folder 3</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="6">Folder 4</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="7">Folder 5</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                    </ul>
-                </div>
-                <p class="ms-font-l ms-fontWeight-semilight">Body Text</p>
-                <ul class="ms-font-m">
-                    <li>List item 1</li>
-                    <li>List item 2</li>
-                    <li>List item 3</li>
-                </ul>
-            </section>
-        </div>
-        <div class="ms-navigation-pivot__content ms-Pivot-content feature4">
-            <section class="ms-font-m ms-fontColor-neutralPrimary">
-                <h2 class="ms-font-xl ms-fontWeight-light">Page 4 Title</h2>
-                <div class="ms-navigation-pivot__breadcrumb ms-Breadcrumb">
-                    <div class="ms-Breadcrumb-overflow">
-                        <div class="ms-Breadcrumb-overflowButton ms-Icon ms-Icon--ellipsis" tabindex="1"></div>
-                        <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        <div class="ms-Breadcrumb-overflowMenu">
-                            <ul class="ms-ContextualMenu is-open"></ul>
-                        </div>
-                    </div>
-                    <ul class="ms-Breadcrumb-list">
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="2">Files</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="3">Folder 1</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="4">Folder 2</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="5">Folder 3</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="6">Folder 4</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                        <li class="ms-Breadcrumb-listItem">
-                            <a class="ms-Breadcrumb-itemLink" href="#" tabindex="7">Folder 5</a>
-                            <i class="ms-Breadcrumb-chevron ms-Icon ms-Icon--chevronRight"></i>
-                        </li>
-                    </ul>
-                </div>
-                <p class="ms-font-l ms-fontWeight-semilight">Body Text</p>
-                <ul class="ms-font-m">
-                    <li>List item 1</li>
-                    <li>List item 2</li>
-                    <li>List item 3</li>
-                </ul>
-            </section>
+        <div class="ms-Pivot-content" data-content="shared">
+        This is the shared with me tab.
         </div>
     </div>
-    <footer class="ms-navigation-pivot__footer  ms-bgColor-themePrimary">
-        <div class="ms-navigation-pivot__footer--left">
-            <img src="/assets/logo-filled.png" />
-            <h1 class="ms-font-xl ms-fontWeight-semilight ms-fontColor-white">My Add-in Name</h1>
+    <!-- Start placeholder Body content-->
+    <section class="placeholder__content">
+        <div class="placeholder__content--textTitle ms-bgColor-neutralLighter"></div>
+        <div class="placeholder__content--textBody ms-bgColor-neutralLighter"></div>
+        <div class="placeholder__content--textBody ms-bgColor-neutralLighter"></div>
+        <div class="placeholder__content--textBody ms-bgColor-neutralLighter"></div>
+        <div class="placeholder__content--textBody ms-bgColor-neutralLighter"></div>
+    </section>
+    <!-- End placeholder Body content-->
+    <!-- Start placeholder footer -->
+    <footer class="placeholder__footer ms-borderColor-neutralLight ms-bgColor-white">
+        <div class="placeholder__footer--left">
+            <div class="placeholder__footer--left--logo ms-bgColor-neutralLighter"></div>
+            <div class="placeholder__footer--left--text ms-bgColor-neutralLighter"></div>
         </div>
-        <div class="ms-navigation-pivot__footer--right">
-            <i class="ms-Icon enlarge ms-Icon--gear ms-fontColor-white"></i>
+        <div class="placeholder__footer--right">
+            <div class="placeholder__footer--right--cmd ms-bgColor-neutralLighter"></div>
         </div>
     </footer>
+    <!-- End placeholder footer -->
+    
+    <!-- Required JS -->
+    <script src="../../../../node_modules/jquery/dist/jquery.js"></script>
+    <!-- <script type="text/javascript" src="pivot.helper.js"></script> -->
+    <script type="text/javascript" src="Pivot.js"></script>
 </body>
 </html>
