--- a/src/templates/notifications/toast/index.html
+++ b/src/templates/notifications/toast/index.html
@@ -7,55 +7,63 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>Welcome Screen - Trail Placemat</title>
-    <!-- For the Office UI Fabric, go to http://aka.ms/office-ui-fabric to learn more. -->
+    <title>Toast</title>
+    <!-- For the Office UI Fabric, go to http://aka.ms/office-ui-fabric to learn more.
     <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.min.css">
     <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.components.min.css">
-    <!-- Template styles -->
+    Template styles -->
+
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
+
+    <!-- For the Office UI Fabric, go to http://aka.ms/office-ui-fabric to learn more. -->
+    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric-js/dist/css/fabric.min.css" />
+    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric-js/dist/css/fabric.components.min.css" />
+    <script src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/js/fabric.min.js"></script>
     
     <link href="toast.css" rel="stylesheet" type="text/css" />
 </head>
-<body class="ms-font-l ms-notification-toast">
-    <main class="ms-notification-toast__main">
-        <section class="ms-notification-toast__header ms-bgColor-themeLighter">
-            <div class="ms-notification-toast__header--center ms-font-m ms-fontWeight-light">
-                <p>
-                    <i class="ms-Icon ms-Icon--plus ms-fontColor-themePrimary"></i>
-                    Item 1
-                </p><p>
-                    <i class="ms-Icon ms-Icon--plus ms-fontColor-themePrimary"></i>
-                    Item 2
-                </p>
+<body>
+    <main class="placeholder">
+        <header class="placeholder__header ms-borderColor-neutralLight">
+            <div class="placeholder__header--left">
+                <nav class="ms-bgColor-neutralLighter"></nav>
             </div>
-            <div class="ms-notification-toast__header--right ms-font-m ms-fontWeight-light">
-                <i class="ms-Icon ms-Icon--reactivate ms-fontColor-themePrimary"></i>
+            <div class="placeholder__header--right">
+                <div class="placeholder__header--right--cmd ms-bgColor-neutralLighter"></div>
+                <div class="placeholder__header--right--text ms-bgColor-neutralLighter"></div>
+                <div class="placeholder__header--right--cmd ms-bgColor-neutralLighter"></div>
+                <div class="placeholder__header--right--text ms-bgColor-neutralLighter"></div>
+                <div class="placeholder__header--right--cmd ms-bgColor-neutralLighter"></div>
+                <div class="placeholder__header--right--text ms-bgColor-neutralLighter"></div>
             </div>
-        </section>
-        <section class="ms-notification-toast__content ms-font-m ms-fontColor-neutralPrimary">
-           
-            <article class="ms-embedded-dialog__content">
-                <div class="ms-font-xl ms-notification-toast__content__title">Title</div>
-                <div class="ms-font-l ms-fontWeight-light ms-notification-toast__content__subtitle">Subtitle</div>
-                <div class="ms-font-m ms-notification-toast__content__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-                
-            </article>
+        </header>
+        <section class="placeholder__content">
+            <div class="placeholder__content--textTitle ms-bgColor-neutralLighter"></div>
+            <div class="placeholder__content--textBody ms-bgColor-neutralLighter"></div>
+            <div class="placeholder__content--textBody ms-bgColor-neutralLighter"></div>
+            <div class="placeholder__content--textBody ms-bgColor-neutralLighter"></div>
+            <div class="placeholder__content--textBody ms-bgColor-neutralLighter"></div>
         </section>
     </main>
-    <footer class="ms-notification-toast__footer  ms-bgColor-themePrimary">
-        <div class="ms-notification-toast__footer--left">
-            <img src="/assets/logo-filled.png" />
-            <h1 class="ms-font-xl ms-fontWeight-semilight ms-fontColor-white">My Add-in Name</h1>
+    <!-- Footer -->
+    <footer class="placeholder__footer ms-borderColor-neutralLight ms-bgColor-white">
+        <div class="placeholder__footer--left">
+            <div class="placeholder__footer--left--logo ms-bgColor-neutralLighter"></div>
+            <div class="placeholder__footer--left--text ms-bgColor-neutralLighter"></div>
         </div>
-        <div class="ms-notification-toast__footer--right">
-            <i class="ms-Icon enlarge ms-Icon--gear ms-fontColor-white"></i>
+        <div class="placeholder__footer--right">
+            <div class="placeholder__footer--right--cmd ms-bgColor-neutralLighter"></div>
         </div>
     </footer>
+    <script src="../../../../node_modules/core-js/client/core.min.js"></script>
+    <script src="../../../../node_modules/@microsoft/office-js-helpers/dist/office.helpers.min.js"></script>
+    <script src="../../../../node_modules/jquery/dist/jquery.js"></script>
     <script src="toast.js"></script>
     <script type="text/javascript">
         if (typeof fabric === "object") {
             if ('Toast' in fabric) {
                 var component = new fabric['Toast'];
-                component.showToast('Toast header', 'Toast content lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce aliquam quam dolor sit amet adipiscing elit. ');
+                component.showToast('Toast header', 'Toast body content. Lorem ipsum dolor sit amet, consectetur adipiscing. ');
             }
         }
     </script>
