--- a/src/templates/utility/splash-screen/index.html
+++ b/src/templates/utility/splash-screen/index.html
@@ -8,11 +8,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-        <title>Spinner</title>
-
-        <!-- For the Office UI Fabric, go to http://aka.ms/office-ui-fabric to learn more.
-        <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.min.css">
-        <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/2.1.0/fabric.components.min.css"-->
+        <title>Splash Screen</title>
 
         <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
 
@@ -22,10 +18,14 @@
         <script src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.2.0/js/fabric.min.js"></script>
 
         <!-- Template styles -->
-        
+        <link href="splash-screen.css" rel="stylesheet" type="text/css" />
         <link href="spinner.css" rel="stylesheet" type="text/css" />
     </head>
-    <body>
+    <body class="dp-splash-screen">
+        <div class="dp-splash-screen__brand">
+            <img src="../../../assets/square-logo-64.png" />
+            <h3 class="ms-font-l">My Add-in</h3>
+        </div>
         <div class="dp-spinner">
             <div class="dp-spinner__circle"></div>
             <p class="dp-spinner__label ms-font-m ms-fontColor-themePrimary">Loading...</p>
